# documenting-your-code

./: .buildinfo  .gitignore  README.md  genindex.html  index.html  objects.inv  py-modindex.html  requirements.txt  search.html  searchindex.js  setup.cfg
.github/workflows/: build_deploy_docs.yml  deploy.yml
_modules/: index.html
_modules/randomly/: facts.html  palette.html  password.html  points.html
api/: facts.html  palette.html  password.html  points.html
docs/: _config.yml  _toc.yml  index.md
docs/.github/workflows/: deploy.yml
docs/api/: facts.rst  fib.rst  palette.rst  password.rst  points.rst
docs/guides/: install.md  points.ipynb
docs/pycon_docs_tutorial/: CONTRIBUTING.md  LICENSE  README.md
docs/pycon_docs_tutorial/.github/workflows/: deploy.yml
docs/pycon_docs_tutorial/pycon_docs_tutorial/: _config.yml
guides/: install.html  points.html
randomly/: facts.py  fib.py  palette.py  password.py  points.py  walk.py
