[metadata]
name = randomly
version = 0.0.1
author = Jacob Deppen
author_email = deppen.8@gmail.com
description = A small package for learning documentation
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/deppen8/documenting-your-code
project_urls =
    Bug Tracker = https://github.com/deppen8/documenting-your-code/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires =
    jupyter-book~=0.12.1
    matplotlib~=3.5.0
    numpy~=1.21.4
    requests~=2.26.0
    scipy~=1.7.3


[options]
package_dir =
packages = find:
python_requires = >=3.6
